# Axon

./: .gitignore  CMakeLists.txt  CMakePresets.json  NeuralNet.sln  NeuralNet.vcxproj  NeuralNet.vcxproj.filters  README.md
.github/workflows/: docs.yml
NetworkTest/: CMakeLists.txt
NetworkTest/src/: main.cpp
NetworkTrain/: CMakeLists.txt
NetworkTrain/src/: MnistReader.cpp  main.cpp
NeuralNet/: 0.nn  NN.h  NNFile.cpp  NetworkBackProp.cpp  NetworkBackProp.h  NeuralNet.cpp  NeuralNet.h  NeuralNet.vcxproj  NeuralNet.vcxproj.filters  main.cpp
NeuralNetLib/: CMakeLists.txt  TODO.md
NeuralNetLib/benchmark/: benchmark.cpp  experimental.cpp
NeuralNetLib/docs/html/: _g_p_u_8hpp_source.html  _network_8hpp.js  _network_8hpp_source.html  _network_back_prop_8cpp_source.html  _network_back_prop_8hpp.html  _network_back_prop_8hpp.js  _network_back_prop_8hpp_source.html  _network_back_prop_base_8hpp_source.html  _network_back_prop_c_p_u_8hpp_source.html  _network_back_prop_g_p_u_8cpp_source.html  _network_base_8hpp_source.html  _network_error_8hpp.js  _network_g_p_u_8cpp_source.html  _parameters_8hpp_source.html  annotated.html  annotated_dup.js  benchmark_8cpp_source.html  class_g_p_u-members.html  class_g_p_u.html  classaxon_1_1_file_error_category.html  classaxon_1_1_network-members.html  classaxon_1_1_network.js  classaxon_1_1_network__coll__graph.md5  classaxon_1_1_network_back_prop.js  classaxon_1_1_network_back_prop_base.html  classaxon_1_1_network_back_prop_c_p_u-members.html  classaxon_1_1_network_c_p_u.html  classaxon_1_1_network_g_p_u-members.html  classaxon_1_1_network_g_p_u.html  classaxon_1_1_usage_error_category-members.html  classes.html  dir_34e51b83c23882979bfbbb8e0a73741d.html  dir_3df5f0f52812dfb7ba948634f5357515.html  dir_3df5f0f52812dfb7ba948634f5357515.js  dir_74bd91584aa3ffdb01267ec5b222e959.js  dir_99a2dffe13fa4b327b3ebdc59e063f72.html  dir_99a2dffe13fa4b327b3ebdc59e063f72.js  dir_99a2dffe13fa4b327b3ebdc59e063f72_dep.md5  dir_a82b84f153823a5015c5b56238c7d862.html  dir_d44c64559bbebec7f509842c48db8b23.html  (+20 more)
NeuralNetLib/docs/html/search/: all_0.js  all_11.js  all_4.js  all_5.js  all_7.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_4.js  enumvalues_6.js  functions_0.js  functions_1.js  functions_4.js  functions_6.js  functions_7.js  groups_0.js  pages_0.js  pages_1.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_7.js  variables_8.js
NeuralNetLib/include/: Network.hpp  NetworkBackProp.h  NetworkBackProp.hpp  NeuralNet.h
NeuralNetLib/src/: GPU.cpp  NNFile.cpp  Network.cpp  NetworkBackProp.cpp  NetworkBackPropCPU.cpp  NetworkBackPropGPU.cpp  NetworkCPU.cpp  NetworkFile.cpp  NetworkGPU.cpp  NeuralNet.cpp  Parameters.cpp
NeuralNetLib/src/detail/: GPU.h  NN.h  NetworkBackPropBase.hpp  NetworkBackPropCPU.hpp  NetworkBackPropGPU.hpp  NetworkBase.hpp  NetworkCPU.hpp  NetworkError.hpp  NetworkGPU.hpp  Parameters.hpp  pch.h  utils.h  utils.hpp
NeuralNetLib/tests/: test.cpp  testUtils.cpp
docs/: Doxyfile
docs/html/: _network_8cpp_source.html  _network_8hpp.html  _network_back_prop_c_p_u_8cpp_source.html  _network_back_prop_g_p_u_8hpp_source.html  _network_c_p_u_8cpp_source.html  _network_c_p_u_8hpp_source.html  _network_error_8hpp.html  _network_error_8hpp_source.html  _network_file_8cpp_source.html  _network_g_p_u_8hpp_source.html  _parameters_8cpp_source.html  classaxon_1_1_file_error_category-members.html  classaxon_1_1_interface_error_category-members.html  classaxon_1_1_interface_error_category.html  classaxon_1_1_network.html  classaxon_1_1_network__inherit__graph.md5  classaxon_1_1_network_back_prop-members.html  classaxon_1_1_network_back_prop.html  classaxon_1_1_network_back_prop__coll__graph.md5  classaxon_1_1_network_back_prop_base-members.html  classaxon_1_1_network_back_prop_c_p_u.html  classaxon_1_1_network_base-members.html  classaxon_1_1_network_base.html  classaxon_1_1_network_c_p_u-members.html  classaxon_1_1_usage_error_category.html  dir_34e51b83c23882979bfbbb8e0a73741d.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_74bd91584aa3ffdb01267ec5b222e959.html  dir_a82b84f153823a5015c5b56238c7d862.js  dir_b4918739477d3ff8a84f7a42accf2ed5.html  dir_b4918739477d3ff8a84f7a42accf2ed5.js  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.js  (+22 more)
(+34 files in other folders)
